@@ -8,6 +8,8 @@ o FIX: update to revised network loadings signs
 
 o FIX: bug in argument 'returnAllResults' for `EBICglasso.qgraph`
 
+o FIX: bug when passing additional non-`dimensionStability` arugments into `bootEGA`
+
 o UPDATE: `network.predictability` uses empirical inverse variances (rather than network-implied)
 
 o UPDATE: R-squared in `continuous_accuracy` helper uses formula for no intercept
